deploy/release.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  # how many empty replicasets should last
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      run: server
  replicas: 1
  template:
    metadata:
      labels:
        run: server
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: server
          image: $(Build.Definitionname)
          imagePullPolicy: Always
